--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Mr. Akinwale's Web Page</h1>
-        <p>I am a math and web design teacher. I live in Southern California.
+        <p>I am a math and web design teacher. I live on the West Coast.
         Also, I like playing tennis.</p>
     </body>
   
