--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <title>Mr. Akinwale's web page</title>
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <h1>Mr. Akinwale's Web Page</h1>
         <p>I am a math and web design teacher. I live on the West Coast.
         Also, I like playing tennis.</p>
+        <button type="button" onclick="myFunction()">Do It</button>
     </body>
   
 </html>
