--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Mr. Akinwale's Web Page</h1>
-        <p>I am a math and web design teacher. I live on the West Coast.
+        <p id="demo">I am a math and web design teacher. I live on the West Coast.
         Also, I like playing tennis.</p>
         <button type="button" onclick="myFunction()">Do It</button>
     </body>
