--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Mr. Akinwale's Web Page</h1>
         <p id="demo">I am a math and web design teacher. I live on the West Coast.
         Also, I like playing tennis.</p>
-        <button type="button" onclick="myFunction()">Do It</button>
+        <div id="clockdiv"></div>
     </body>
   
 </html>
